# gamedata-recorder

./: .gitattributes  .gitignore  BUGS.md  CLAUDE.md  CONTINGENCY.md  CONTRIBUTING.md  Cargo.toml  GAMES.md  MEGA_AUDIT.md  README.md  TRIAGE.md  blackout.md  build.rs  check_input_log.py  check_video.py  crash_debug.md  f9_fix.md  issues.md  list_game_windows.ps1  memory.md  run_ci.ps1  test-20rounds.sh  test-30rounds.sh  user_scenario.md
.github/workflows/: build.yml  ci-e2e.yml  full-test.yml  nightly-nucbox-e2e.yml  rust-build.yml
.oystercode/snapshots/: 9199b6c416f65304_1776035456609.json  9199b6c416f65304_meta.json  c00d56ed7abbcc85_1775936065298.json  c00d56ed7abbcc85_meta.json  ff2e39716366ea00_1775936065065.json  ff2e39716366ea00_meta.json
.research/: findings.md  research-log.md  research-state.yaml
.research/experiments/H1-reduce-duplication/: protocol.md  results.md
.research/experiments/H2-optimize-mutex/: protocol.md  results.md
.research/experiments/H3-improve-error-handling/: protocol.md  results.md
.research/experiments/H4-add-documentation/: protocol.md  results.md
.research/experiments/H5-optimize-windows-api/: protocol.md  results.md
.research/experiments/H6-refactor-gamepad/: protocol.md  results.md
.research/to_human/: FINAL_REPORT.md  RESEARCH_REPORT.md
backend/: .env.example  CLAUDE.md  DATABASE.md  Dockerfile  alembic.ini  deploy.sh  main.py  models.py  monitor.sh  requirements.txt  setup_database.sh  test_api.py  test_api_v2.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
build-resources/: installer.nsi
build-resources/scripts/: build-arm64.ps1  build.ps1  build_utm_from_local.ps1  clean_obs_build.ps1  update_unsupported_games.py
crates/action-camera-tests/: Cargo.toml
crates/action-camera-tests/src/: lib.rs  util_mod.rs
crates/action-camera-tests/tests/: integration.rs
crates/constants/: Cargo.toml
crates/constants/src/: CLAUDE.md  encoding.rs  lib.rs  supported_games.README.md  supported_games.json  unsupported_games.json  unsupported_games.rs
crates/constants/src/.oystercode/snapshots/: L1VzZXJzL2hvd2Fy_1776035322256.json  L1VzZXJzL2hvd2Fy_1776035457008.json  L1VzZXJzL2hvd2Fy_1776035754174.json
crates/depth-hook/: Cargo.toml  README.md
crates/depth-hook/src/: capture.rs  lib.rs  types.rs
crates/depth-hook/src/dx12/: hook.rs  mod.rs
crates/depth-hook/src/profiles/: common.rs  cyberpunk2077.rs  mod.rs
crates/depth-hook/tests/: test_heuristic_serialization.rs  test_profile_registry.rs
crates/engine-telemetry/: Cargo.toml
crates/engine-telemetry/docs/: CYBERPUNK_HOOK_RUNBOOK.md  GTA_V_HOOK_RUNBOOK.md
crates/engine-telemetry/src/: lib.rs
crates/engine-telemetry/tests/: integration.rs
crates/game-process/src/: lib.rs
crates/input-capture/: Cargo.toml
crates/input-capture/.oystercode/snapshots/: L1VzZXJzL2hvd2Fy_1775935926458.json
crates/input-capture/examples/: input-read.rs
crates/input-capture/src/: CLAUDE.md  action_scaffold.rs  gamepad_capture.rs  kbm_capture.rs  lib.rs  timestamp.rs  trajectory.rs  vkey_names.rs
crates/input-capture/src/.oystercode/snapshots/: L1VzZXJzL2hvd2Fy_1775935896701.json  L1VzZXJzL2hvd2Fy_1775935949128.json
crates/obs-embedded-recorder/src/: CLAUDE.md
docs/: ARCHITECTURE.md  AUTORESEARCH_2026_04_20.md  BETA_TESTING_PLAN.md  CAPTURE_PERFORMANCE_INVESTIGATION.md  CLOUDFLARE_TUNNEL_SETUP.md  COMPREHENSIVE_REVIEW_REPORT.md  DEPLOYMENT.md  MULTI_GAME_ROADMAP.md  NUCBOX_SETUP_SOP.md  PRODUCTIZATION_ROADMAP.md  PUFFYDEV_BRIEF_2026_05_01.md  RECORDER_BUYER_SPEC_FEATURES.md  autoresearch-r7-findings.md  backend-architecture.md  engine-plugin-research.md  input_format.md  nucbox-runner-setup.md  tech-research.md
githooks/: pre-commit
installer/: gamedata-recorder.iss
memory/: window_capture_fix.md
scripts/: e2e-quick.sh  e2e-smoke.ps1  setup-nucbox-autoresearch.sh
skills/rust-pre-commit-hooks/: README.md  SKILL.md
skills/rust-pre-commit-hooks/evals/: evals.json
skills/rust-pre-commit-hooks/scripts/: pre-commit.ps1  pre-commit.sh  setup-hooks.ps1  setup-hooks.sh
src/: CLAUDE.md  app_state.rs  assets.rs  config.rs  main.rs  output_types.rs  play_time.rs  tokio_thread.rs
src/.oystercode/snapshots/: L1VzZXJzL2hvd2Fy_1776035334029.json  L1VzZXJzL2hvd2Fy_1776035351976.json
src/api/: mod.rs  multipart_upload.rs  user_upload.rs
src/config/: mod.rs
src/output_types/: lem_metadata.rs  lem_types.rs  mod.rs
src/record/: CLAUDE.md  action_camera_writer.rs  fps_logger.rs  input_recorder.rs  lem_input_recorder.rs  local_recording.rs  metadata_writer.rs  mod.rs  obs_embedded_recorder.rs  obs_socket_recorder.rs  recorder.rs  recording.rs  session_manager.rs  video_metadata.rs
src/record/.oystercode/snapshots/: L1VzZXJzL2hvd2Fy_1776035754506.json
src/system/: disk_type.rs  ensure_single_instance.rs  gpu_memory.rs  hardware_id.rs  hardware_specs.rs  keycode.rs  mod.rs  raw_input_debouncer.rs  window_validation.rs
src/ui/: CLAUDE.md  consent.md  internal.rs  mod.rs  notification.rs  overlay.rs  tray_icon.rs  util.rs
src/ui/components/: mod.rs
src/ui/views/: consent.rs  mod.rs
src/ui/views/main/: CLAUDE.md  mod.rs  upload_manager.rs
src/ui/views/main/windows/: games.rs
src/upload/: create_tar.rs  mod.rs  progress_sender.rs  upload_folder.rs  upload_tar.rs
src/util/: durable_write.rs  log_rotation.rs  mod.rs  version.rs
src/validation/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs  video.rs
test_game/: Cargo.toml  main.rs
tests/: README.md  test_basic.bat  test_basic_recording.ps1  test_puffydev_brief.py  test_ui_clicks.ahk
tmp_install/assets/cues/: audio_attributions.md
tools/bump-version/: Cargo.toml
tools/bump-version/src/: main.rs
tools/owlc-test-app/: Cargo.toml  README.md
tools/owlc-test-app/src/: lib.rs  main.rs
tools/update-games/: Cargo.toml
tools/update-games/src/: main.rs
tools/vm/: owl-cleanup.sh  owl-dev-setup.sh  owl-install-prerequisites.sh  owl-windows-dev-setup.ps1
