[package]
name = "action-camera-tests"
version = "0.1.0"
edition = "2024"
publish = false

# This crate exists ONLY to compile the cross-platform pure-logic parts of
# `src/record/action_camera_writer.rs` on non-Windows hosts (macOS / Linux CI)
# so we can run its unit tests + integration tests without dragging in
# libobs-wrapper / glfw / tray-icon / egui_overlay (the Windows-only deps of
# the top-level `gamedata-recorder` crate).
#
# The writer source file is source-included via `#[path = ...]` from
# `src/lib.rs`, NOT compiled as part of the top-level crate. Building this
# crate on Windows is also fine — it just compiles the same logic as a
# library.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
constants = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
