[package]
name = "input-capture"
version = "0.0.0"
edition = "2024"

[features]
default = []
compression = ["dep:zstd"]

[dependencies]
tracing.workspace = true
windows = { workspace = true, features = [
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_Com",
] }
color-eyre.workspace = true
serde.workspace = true
tokio.workspace = true
zstd = { version = "0.13", optional = true }

# See gamepad_capture.rs for more details as to why we import gilrs twice. We use a git dependency
# here to allow cargo to import the same package twice. Disgusting.
gilrs-xinput = { package = "gilrs", git = "https://gitlab.com/gilrs-project/gilrs.git", default-features = false, features = [
    "xinput",
] }
gilrs-wgi = { package = "gilrs", version = "0.11.0", default-features = false, features = [
    "wgi",
] }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
